<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Comapping</string>

	<string name="view_type_preference_key">viewType</string>
	<string name="view_type_preference_title">View type</string>

	<string name="explorer_view_value">Explorer view</string>
	<string name="comapping_view_value">Comapping view</string>

	<string name="download_folder_preference_key">downloadFolder</string>
	<string name="download_folder_preference_title">Download Folder</string>
	<string name="download_folder_preference_dialogTitle">Specify attachments downloading folder</string>
	
	<string name="use_proxy_preference_key">useProxy</string>
	<string name="use_proxy_preference_title">Enable proxy</string>
	<string name="proxy_host_preference_key">proxyHost</string>
	<string name="proxy_host_preference_title">Proxy host</string>
	<string name="proxy_port_preference_key">proxyPort</string>
	<string name="proxy_port_preference_title">Proxy port</string>
	<string name="use_proxy_auth_preference_key">useProxyAuth</string>
	<string name="use_proxy_auth_preference_title">Use proxy auth</string>
	<string name="proxy_name_preference_key">proxyName</string>
	<string name="proxy_name_preference_title">Proxy User Name</string>
	<string name="proxy_password_preference_key">proxyPassword</string>
	<string name="proxy_password_preference_title">Proxy Password</string>
	
	<string name="search_label">Comapping</string>
	<string name="search_hint">Search in the current map</string>	
</resources>
